# meta_synapse_hackathon

./: .gitignore  DEVELOPMENT.md  Dockerfile  LICENSE  Medical_Diagnostic_Environment_Full_Report.docx  PROJECT_SUMMARY.md  README.md  SUBMISSION_CHECKLIST.md  __init__.py  client.py  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  quickstart.bat  quickstart.sh  test_deployment.py  training_wrapper.py  validate.py
server/: Dockerfile  __init__.py  app.py  environment.py  medical_data.py  requirements.txt
tests/: test_environment.py
